examples/invalid/02_top_level_let_forward_value.lane
module Examples.Invalid02
// invalid: top-level let initializers follow ordered value scope
pub let y : Int = x
pub let x : Int = 1
